Fix issues sonar quabe